--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,19 +1,19 @@
 {
   "home": {
-    "title": "Welcome, Node Hipster Official Blueprint!",
-    "subtitle": "This is your homepage",
+    "title": "Welcome to Innovate AI!",
+    "subtitle": "",
     "logged": {
       "message": "You are logged in as user \"{{username}}\"."
     },
-    "question": "If you have any question on JHipster or NHipster:",
+    "question": "Please select from the following menu:",
     "link": {
-      "homepage": "JHipster homepage",
-      "stackoverflow": "JHipster on Stack Overflow",
+      "ideation": "What would you like to explore?",
+      "option": "some option",
       "bugtracker": "NHipster bug tracker",
       "chat": "NHipster public chat room",
       "follow": "follow @jhipster on Twitter"
     },
-    "like": "If you like NHipster, don't forget to give us a star on",
-    "github": "GitHub"
+    "like": "If you like Innovate AI, don't forget to give us a star on",
+    "github": "https://github.com/Serpent999/innovate-ai"
   }
 }
